packages/kit/test/apps/basics/src/routes/errors/endpoint.json.js
/** @type {import('@dishuostec/kit').RequestHandler} */
export function get() {
	throw new Error('nope');
}
